<resources>
    <string name="app_name">homework3</string>
    <string name="header_name">Header Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="preferred_day_of_the_week">Preferred day of the week</string>
    <string name="radio_monday">Monday</string>
    <string name="radio_wednesday">Wednesday</string>
    <string name="radio_friday">Friday</string>
    <string name="agree_to_terms">Agree to Terms</string>
    <string name="button_submit">Submit</string>
</resources>
