<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edw.lv.homework3.MainActivity">

    <include layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/first_name"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:backgroundTint="@color/txtTint"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/last_name"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:backgroundTint="@color/txtTint"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/age"

                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/txtSize" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:backgroundTint="@color/txtTint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/preferred_day_of_the_week"

                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/txtSize" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:layout_marginTop="@dimen/radioBtnMargin"
                android:text="@string/radio_monday" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/startMargin"
                android:text="@string/radio_wednesday" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"

                android:text="@string/radio_friday" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/startMargin"
                android:layout_marginTop="@dimen/termsMargin"
                android:text="@string/agree_to_terms"
                android:textColor="@color/termBtnColor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/button_submit"
                android:textAllCaps="false" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
